# tracing-otel-global-bug-repro

./: Cargo.toml  README.md
src/: main.rs
